fix: index.html

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <a class="link" href="https://isayka12.github.io/Monovision-Studio/src/" target="_blank">Project:
                     <span>Monovision-Studio</span></a>
                 <h2 id="education" class="inform__h2">Education: Basics of programming</h2>
+                <h2 id="education" class="inform__h2">English: A2</h2>
             </div>
         </section>
     </main>
